[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "foxtail-blog"
module = "foxtail_blog"
description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
author = "Luke Rogers"
author-email = "luke@dmptr.com"
home-page = "https://github.com/dmptrluke/foxtail-blog"
requires-python=">=3.6"
requires = [
    'django>=2.2',
    'django-markdownfield>=0.6.1',
    'django-taggit',
    'django-versatileimagefield',
    'django-crispy-forms',
    'django-recaptcha',
    'django-csp-helpers>=0.5.0',
    'django-published>=0.6.0'
]

[tool.flit.metadata.requires-extra]
test = [
    'flit==2.1.0',
    'atoma==0.0.17',
    'coverage==5.0.1',
    'factory-boy==2.12.0',
    'django-environ==0.4.5',
    'pytest==5.3.2',
    'pytest-cov==2.8.1',
    'pytest-django==3.7.0',
    'pytest-factoryboy==2.0.3',
    'pytest-xdist==1.31.0',
    'selenium==3.141.0',
    'tox==3.14.3',
]

[tool.isort]
line_length = 100
skip_glob = "*/node_modules/*,*/.tox/*,*/.git/*"
balanced_wrapping = true
known_third_party = ["atoma", "captcha", "crispy_forms", "csp_helpers", "environ", "factory", "markdownfield", "published", "pytest", "pytest_factoryboy", "pytz", "taggit", "versatileimagefield"]
known_django = ["django"]
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]